--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ PORT=3000
 PRIVATE_KEY_PATH=./keys/private.key
 PUBLIC_KEY_PATH=./keys/public.key
 BAR_PANK_JWKS_URL=http://localhost:3000/.well-known/jwks.json
+BANK_PREFIX=BANK
+CENTRAL_BANK_URL=https://henno.cfd/henno-pank
