--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=127.0.0.1
 DB_USER=root
 DB_PASSWORD=root
-DB_NAME=bankDB
+DB_NAME=bankdb
 PORT=3000
 PRIVATE_KEY_PATH=./keys/private.key
 PUBLIC_KEY_PATH=./keys/public.key
